--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,9 @@ environment:
 
 dependencies:
   http: ^0.12.0+2
-  intl: ^0.16.0
-  uuid: ^2.0.2
+  intl: 0.16.0
+  uuid: 2.0.2
+  flutter_webview_plugin: 0.3.7
   flutter:
     sdk: flutter
 
